<resources>
    <string name="app_name">Simple Todo</string>
    <string name="EditTitle">Edit Item Below:</string>
    <string name="action_settings">Settings</string>
    <string name="add_lbl">ADD</string>
    <string name="enter_itm_lbl">Enter Item Name</string>
    <string name="delpos_lbl">Enter Index to delete</string>
    <string name="lbl_delbtn">Delete</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="edit_lbl">Edit Item</string>
    <string name="save_lbl">SAVE</string>
    <string name="hello">Hi</string>
    <string name="edititem_title">Edit Item Below:</string>


</resources>
