<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvItems"
        android:layout_above="@+id/btn_id"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="139dp"
        android:choiceMode="none" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_id"
         android:layout_alignTop="@+id/btn_id"
        android:hint="@string/enter_itm_lbl"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/btn_id"
        android:layout_toStartOf="@+id/btn_id"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_lbl"
        android:id="@+id/btn_id"
        android:onClick="onAddItem"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delitem_id"
        android:layout_above="@+id/item_id"
        android:hint="@string/delpos_lbl"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_delbtn"
        android:id="@+id/delbtn_id"
        android:onClick="OnDelete"
        android:layout_alignBottom="@+id/delitem_id"
        android:layout_alignEnd="@+id/btn_id" />


</RelativeLayout>
